Fix routes and env handling

--- a/.env
+++ b/.env
@@ -1,2 +1,8 @@
 OPENAI_API_KEY=your_openai_api_key_here
-# Add your actual OpenAI API key above
+BINANCE_API_KEY=your_binance_api_key_here
+BINANCE_API_SECRET=your_binance_secret_here
+FIREBASE_PROJECT_ID=your_firebase_project_id
+CRYPTO_PANIC_TOKEN=your_cryptopanic_token
+MAX_EXPOSURE_PERCENT=10
+DEFAULT_POSITION_SIZE_PERCENT=2
+MAX_DAILY_DRAWDOWN=5
